2010-03-22  Dirk Pranke  <dpranke@chromium.org>

        Reviewed by Dimitri Glazkov.

        Change baseline_path() to point to the upstream locations for the
        Chromium ports. Also change the reabselining scripts to use the
        correct functions to get the baseline directories, and fix the
        script's sys.path to pull in simplejson correctly.

        https://bugs.webkit.org/show_bug.cgi?id=36417

        * Scripts/rebaseline-chromium-webkit-tests:
          - fix sys.path to pick up simplejson properly
        * Scripts/webkitpy/layout_tests/port/chromium.py:
          - change baseline_path() to use webkit_baseline_path()
          - error out correctly if we can't find the chromium base dir
        * Scripts/webkitpy/layout_tests/rebaseline_chromium_webkit_tests.py:
          - call baseline_path(), not chromium_baseline_path()

2010-03-22  Chris Jerdonek  <cjerdonek@webkit.org>

        Reviewed by Adam Barth.

        Refactored the cpu_count() code in executive.py.

        https://bugs.webkit.org/show_bug.cgi?id=36437

        * Scripts/webkitpy/executive.py:
          - Moved the import of the multiprocessing module to the top
            of the file rather than importing from within a function.

2010-03-22 Antonio Gomes <tonikitoo@webkit.org>

        Unreviewed.

        Rolling out r56183: http://trac.webkit.org/changeset/56183

        https://bugs.webkit.org/show_bug.cgi?id=36244

        Need to roll out because this patch will be re-worked by the author
        and other reviewers agreed on it.

2010-03-22  Chris Jerdonek  <cjerdonek@webkit.org>

        Reviewed by Adam Barth.

        Created a function for getting a module-specific logging.logger
        based on the __file__ value of the module.

        https://bugs.webkit.org/show_bug.cgi?id=35821

        This function allows us to get the module-specific logger for
        a module without having to hard-code the fully-qualified name